agregado busqueda de lugares en el mapa

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 <input type="checkbox" id="hasMegafono" name="hasMegafono" />
 
             </select>
+            <div>
+                <input type="text" id="searchInput" placeholder="lugar o direccion" />
+                <button id="searchButton">Buscar en mapa</button>
+            </div>
+            
 
         </div>
 
@@ -87,6 +92,7 @@
         <!-- Lógica para manejar el GeoJSON -->
         <script src="js/map.js"></script> <!-- Lógica para el mapa -->
         <script src="js/select.js"></script> <!-- Lógica para el select -->
+        <script src="js/busquedaDireccion.js"></script> <!-- Lógica para el select -->
 
     </body>
 </html>
