agregado copiar ubicacion en el mapa con ctrl+click derecho

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
             </select>
             <div>
-                <input type="text" id="searchInput" placeholder="lugar o direccion" />
                 <button id="searchButton">Buscar en mapa</button>
+                <input type="text" id="searchInput" placeholder="lugar o direccion" />
             </div>
             
 
@@ -93,6 +93,8 @@
         <script src="js/map.js"></script> <!-- Lógica para el mapa -->
         <script src="js/select.js"></script> <!-- Lógica para el select -->
         <script src="js/busquedaDireccion.js"></script> <!-- Lógica para el select -->
+        <script src="js/obtenerUbicacion.js"></script> <!-- Lógica para el select -->
+
 
     </body>
 </html>
